# SPDX-License-Identifier: MIT
add_subdirectory(clientmanager)
add_subdirectory(config)
add_subdirectory(eloslog)
add_subdirectory(event)
add_subdirectory(eventbuffer)
add_subdirectory(eventdispatcher)
add_subdirectory(eventfilter)
add_subdirectory(eventlogging)
add_subdirectory(eventprocessor)
add_subdirectory(logger)
add_subdirectory(message_handler)
add_subdirectory(plugincontrol)
add_subdirectory(pluginmanager)
add_subdirectory(processfilter)
add_subdirectory(rpnfilter)
add_subdirectory(scanner)
add_subdirectory(scanner_manager)
